--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -11,48 +11,11 @@
   <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-my-spaces" role="tabpanel" aria-labelledby="pills-my-spaces-tab">
       <div class="dashboard-container">
-        <h3 class="mt-5 mb-3">My spaces</h3>
-        <%= link_to 'New space', new_space_path, class: "btn-pink topright"%>
-        <div class="row">
-          <% current_user.owned_spaces.each do |space|%>
-            <div class="col-12 col-md-6 col-lg-3 mb-4">
-              <div class="card" id="my-bookings-card">
-                <div class="card-body d-flex flex-column justify-content-between align-items-center">
-                  <% if space.photos.attached? %>
-                    <%= cl_image_tag space.photos[0].key, class: 'card-img-top p-2' %>
-                  <% end %>
-                  <p><strong><%=space.title %></strong></p>
-                  <p>Price: €<%= space.price %> per day</p>
-                  <p>This space has <%= pluralize space.bookings.count(), 'booking' %></p>
-                  <%= link_to "Details", space_path(space), class: "btn-pink m-2" %>
-                  <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'}, id: "delete-text" %>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        </div>
+        <%= render 'my_spaces' %>
       </div>
     </div>
     <div class="tab-pane fade" id="pills-my-bookings" role="tabpanel" aria-labelledby="pills-my-bookings-tab">.
-      <h3 class="mt-4 mb-3">My bookings</h3>
-      <div class="row">
-      <% current_user.bookings.each do |booking| %>
-        <div class="col-12 col-md-6 col-lg-3 mb-4">
-          <div class="card" id="my-bookings-card">
-            <div class="card-body d-flex flex-column justify-content-between align-items-center">
-              <% if booking.space.photos.attached? %>
-                <%= cl_image_tag booking.space.photos[0].key, class: 'card-img-top p-2' %>
-              <% end %>
-              <p><strong><%= booking.space.title %></strong></p>
-              <p>You paid: €<%= booking.space.price %> per day</p>
-              <p>You booked for <%= (booking.ending_date - booking.starting_date).to_i %> days</p>
-              <%= link_to "Details", booking_confirmation_path(booking), class: "btn-pink m-2" %>
-              <%= link_to 'Delete', booking_path(booking), method: :delete, data: {confirm: 'Are you sure?'}, id: "delete-text"  %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-      </div>
+      <%= render 'my_bookings' %>
     </div>
   </div>
 </div>
